--- a/src/styles/base/radio.scss
+++ b/src/styles/base/radio.scss
@@ -26,16 +26,7 @@
   }
 
   &__input {
-    border: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+    @include visually-hidden;
   }
 
   &__label {
@@ -59,6 +50,7 @@
     }
 
     &::after {
+      @include transition(transform);
       background-color: var(--colour-dark-grey);
       content: '';
       height: 24px;
@@ -66,7 +58,6 @@
       position: absolute;
       top: 6px;
       transform: scale(0);
-      transition: transform var(--timing-s) var(--easing);
       width: 24px;
     }
   }
@@ -74,7 +65,8 @@
   &__input:focus ~ #{$parent}__label {
     &::before {
       border-color: var(--colour-green);
-      box-shadow: 0 0 20px 0 var(--colour-grey);
+      box-shadow: var(--focus-shadow);
+      outline: none;
     }
 
     &::after {
