--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -19,10 +19,10 @@ h2 {
 }
 
 a {
+  @include transition(color);
   border-bottom: 1px solid currentColor;
   color: currentColor;
   text-decoration: none;
-  transition: color var(--timing-s) var(--easing);
 
   &:hover {
     color: var(--colour-green);
