--- a/src/styles/components/progress-bar.scss
+++ b/src/styles/components/progress-bar.scss
@@ -14,6 +14,7 @@
   z-index: 2;
 
   &__bar {
+    @include transition(padding-right, width);
     align-items: center;
     background-color: var(--colour-green);
     color: var(--colour-text-inverse);
@@ -23,7 +24,6 @@
     left: 0;
     position: absolute;
     top: 0;
-    transition: padding-right var(--timing-s) var(--easing), width var(--timing-s) var(--easing);
     width: 0;
 
     &.is-active {
