FIX: Finish page style errors

--- a/src/styles/templates/finish.scss
+++ b/src/styles/templates/finish.scss
@@ -7,6 +7,10 @@
 .finish {
   $parent: &;
 
+  &__intro {
+    margin-bottom: var(--gutter-m);
+  }
+
   &__password.has-error {
     #{$parent}__label {
       background-color: var(--colour-error);
