BUILD: Added focus transitions

--- a/src/styles/config/utility.scss
+++ b/src/styles/config/utility.scss
@@ -5,6 +5,7 @@
  *
  */
 .label {
+  @include transition(background-color);
   background-color: var(--colour-dark-grey);
   color: var(--colour-text-inverse);
   display: inline-block;
