--- a/src/styles/base/text-field.scss
+++ b/src/styles/base/text-field.scss
@@ -18,7 +18,7 @@
   }
 
   &__input {
-    @include transition(box-shadow);
+    @include transition(border-color, box-shadow);
     border: 3px solid var(--colour-dark-grey);
     display: block;
     padding: var(--gutter-s);
