BUILD: Used variable for font weight

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -10,7 +10,7 @@
   border: 3px solid var(--colour-green);
   color: var(--colour-text-inverse);
   cursor: pointer;
-  font-weight: 700;
+  font-weight: var(--weight-bold);
   min-height: 76px;
   overflow: hidden;
   position: relative;
