--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -21,12 +21,14 @@
   --colour-yellow: rgb(241, 196, 15);
 
   /**
-   * Font sizes.
+   * Typography.
    */
   --font-xs: 14px;
   --font-s: 16px;
   --font-m: 20px;
   --font-l: 24px;
+
+  --weight-bold: 700;
 
   /**
    * Animation.
