--- a/src/styles/base/text-field.scss
+++ b/src/styles/base/text-field.scss
@@ -12,7 +12,7 @@
     color: var(--colour-text-inverse);
     display: inline-block;
     font-size: var(--font-xs);
-    font-weight: 700;
+    font-weight: var(--weight-bold);
     margin-bottom: -3px;
     padding: var(--gutter-xs) var(--gutter-s);
   }
