--- a/src/styles/config/utility.scss
+++ b/src/styles/config/utility.scss
@@ -10,7 +10,7 @@
   color: var(--colour-text-inverse);
   display: inline-block;
   font-size: var(--font-xs);
-  font-weight: 700;
+  font-weight: var(--weight-bold);
   margin-bottom: -3px;
   padding: var(--gutter-xs) var(--gutter-s);
   position: relative;
@@ -21,4 +21,8 @@
   border: 3px solid var(--colour-dark-grey);
   padding: var(--gutter-m);
   position: relative;
+}
+
+.text-right {
+  text-align: right;
 }
