--- a/src/styles/templates/start.scss
+++ b/src/styles/templates/start.scss
@@ -12,7 +12,7 @@
 
   &__warning {
     background-color: var(--colour-yellow);
-    font-weight: 700;
+    font-weight: var(--weight-bold);
     padding: var(--gutter-s);
   }
 
