--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -12,13 +12,13 @@
   --colour-background: rgb(236, 240, 241);
   --colour-text: rgb(52, 73, 94);
   --colour-text-inverse: rgb(255, 255, 255);
-  --colour-error: rgb(231, 76, 60);
 
   --colour-green: rgb(46, 204, 113);
   --colour-dark-green: rgb(39, 174, 96);
   --colour-grey: rgb(189, 195, 199);
   --colour-dark-grey: rgb(52, 73, 94);
   --colour-yellow: rgb(241, 196, 15);
+  --colour-red: rgb(231, 76, 60);
 
   /**
    * Typography.
