--- a/src/styles/components/score-table.scss
+++ b/src/styles/components/score-table.scss
@@ -33,6 +33,21 @@
     grid-template-columns: 1fr 1fr 200px;
   }
 
+  &__legend {
+    position: relative;
+
+    &::after {
+      background-color: var(--colour-grey);
+      content: '';
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+    }
+  }
+
   &__row {
     &:last-child {
       border-bottom: 0;
@@ -45,7 +60,7 @@
     }
 
     &.is-wrong {
-      #{$parent}__answer {
+      #{$parent}__given-answer {
         text-decoration: line-through;
       }
 
@@ -62,7 +77,8 @@
   }
 
   &__key {
-    background-color: var(--colour-grey);
+    position: relative;
+    z-index: 2;
   }
 
   &__points {
@@ -76,6 +92,11 @@
     #{$parent}__heading {
       background-color: var(--colour-green);
     }
+
+    #{$parent}__legend::after {
+      background-color: var(--colour-green);
+      opacity: 0.5;
+    }
   }
 
   &.is-mixed {
@@ -85,6 +106,11 @@
       background-color: var(--colour-yellow);
       color: var(--colour-text);
     }
+
+    #{$parent}__legend::after {
+      background-color: var(--colour-yellow);
+      opacity: 0.5;
+    }
   }
 
   &.is-wrong {
@@ -92,6 +118,11 @@
 
     #{$parent}__heading {
       background-color: var(--colour-red);
+    }
+
+    #{$parent}__legend::after {
+      background-color: var(--colour-red);
+      opacity: 0.5;
     }
   }
 }
