--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -31,7 +31,7 @@
 @import './components/points';
 @import './components/progress-bar';
 @import './components/question';
-@import './components/score';
+@import './components/scoring';
 @import './components/score-table';
 
 /**
