BUILD: Styled results page medals and people components

--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -20,6 +20,10 @@
   --colour-yellow: rgb(241, 196, 15);
   --colour-red: rgb(231, 76, 60);
 
+  --colour-third: rgb(205, 127, 50);
+  --colour-second: rgb(192, 192, 192);
+  --colour-first: rgb(255, 215, 0);
+
   /**
    * Typography.
    */
@@ -27,6 +31,8 @@
   --font-s: 16px;
   --font-m: 20px;
   --font-l: 24px;
+  --font-xl: 30px;
+  --font-2xl: 36px;
 
   --weight-bold: 700;
 
