--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -28,9 +28,12 @@
 @import './components/choices';
 @import './components/header';
 @import './components/loading';
+@import './components/medal';
+@import './components/person';
 @import './components/points';
 @import './components/progress-bar';
 @import './components/question';
+@import './components/results-table';
 @import './components/scoring';
 @import './components/score-table';
 
