--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -6,14 +6,10 @@
  */
 .header {
   align-items: center;
-  background-color: var(--colour-dark-grey);
-  color: var(--colour-text-inverse);
+  color: var(--colour-dark-grey);
   display: flex;
-  height: var(--progress-bar);
+  height: var(--header);
   justify-content: center;
-  left: 0;
-  position: absolute;
-  top: 0;
   width: 100%;
   z-index: 1;
 }
