--- a/src/styles/components/progress-bar.scss
+++ b/src/styles/components/progress-bar.scss
@@ -5,18 +5,20 @@
  *
  */
 .progress-bar {
+  background-color: var(--colour-light-grey);
   left: 0;
-  height: var(--progress-bar);
+  height: 3px;
   pointer-events: none;
-  position: absolute;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 2;
 
   &__bar {
-    @include transition(padding-right, width);
+    @include transition(transform);
     align-items: center;
     background-color: var(--colour-green);
+    background-image: linear-gradient(to left, var(--colour-green), var(--colour-purple));
     color: var(--colour-text-inverse);
     display: flex;
     height: 100%;
@@ -24,15 +26,19 @@
     left: 0;
     position: absolute;
     top: 0;
-    width: 0;
-
-    &.is-active {
-      padding-right: var(--gutter-s);
-    }
+    width: 100%;
   }
 
   &__text {
-    font-size: var(--font-s);
+    background-image: linear-gradient(to left, var(--colour-green), var(--colour-purple));
+    filter: blur(5px);
+    height: 150%;
+    opacity: 0.5;
+    position: absolute;
+    right: 0;
+    text-indent: -9999px;
+    top: -25%;
+    width: 100%;
   }
 
   &.is-active {
