--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -32,6 +32,7 @@
   &__text {
     @include transition(transform var(--timing-m));
     display: block;
+    font-weight: var(--weight-bold);
     left: 50%;
     position: absolute;
     top: 50%;
