--- a/src/styles/components/scoring.scss
+++ b/src/styles/components/scoring.scss
@@ -7,11 +7,16 @@
 .scoring {
   margin-top: var(--gutter-m);
 
+  &__table:not(:last-child) {
+    margin-bottom: var(--gutter-s);
+  }
+
   &__total {
     align-items: center;
-    border: 3px solid var(--colour-dark-grey);
+    border: 3px solid var(--colour-purple);
     display: flex;
     font-weight: var(--weight-bold);
+    margin-top: var(--gutter-l);
     padding: var(--gutter-s);
   }
 
@@ -22,13 +27,15 @@
   }
 
   &__total-value {
-    border-bottom: 3px solid var(--colour-dark-grey);
+    border-bottom: 3px solid var(--colour-purple);
+    font-weight: var(--weight-bold);
     padding-bottom: var(--gutter-2xs);
     text-align: center;
     width: 100%;
   }
 
   &__total-available {
+    font-weight: var(--weight-bold);
     padding-top: var(--gutter-2xs);
   }
 
