--- a/src/styles/components/medal.scss
+++ b/src/styles/components/medal.scss
@@ -19,7 +19,7 @@
 
     &::before,
     &::after {
-      background-color: var(--colour-dark-grey);
+      background-color: var(--colour-purple);
       bottom: 55%;
       content: '';
       height: 60%;
@@ -89,18 +89,19 @@
   &__total-display {
     display: flex;
     flex-direction: column;
-    font-weight: var(--weight-bold);
     margin-left: auto;
   }
 
   &__total-value {
-    border-bottom: 3px solid var(--colour-dark-grey);
+    border-bottom: 3px solid var(--colour-purple);
+    font-weight: var(--weight-bold);
     padding-bottom: var(--gutter-2xs);
     text-align: center;
     width: 100%;
   }
 
   &__total-available {
+    font-weight: var(--weight-bold);
     padding-top: var(--gutter-2xs);
   }
 }
