BUILD: Created password component stylesheet

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -29,6 +29,7 @@
 @import './components/header';
 @import './components/loading';
 @import './components/medal';
+@import './components/password';
 @import './components/person';
 @import './components/points';
 @import './components/progress-bar';
