--- a/src/styles/templates/start.scss
+++ b/src/styles/templates/start.scss
@@ -5,6 +5,8 @@
  *
  */
 .start {
+  animation: intro var(--timing-l) var(--easing);
+
   &__content,
   &__prize {
     margin-bottom: var(--gutter-l);
