--- a/src/styles/components/results-table.scss
+++ b/src/styles/components/results-table.scss
@@ -5,7 +5,10 @@
  *
  */
 .results-table {
+  animation: intro var(--timing-l) var(--easing);
+
   &__people {
+    animation: intro var(--timing-l) var(--easing);
     margin-bottom: var(--gutter-l);
   }
 }
