--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -44,6 +44,7 @@
    */
   --timing-s: 0.4s;
   --timing-m: 0.6s;
+  --timing-l: 1s;
   --easing: ease;
 
   /**
@@ -59,10 +60,33 @@
    * Layout.
    */
   --header: 60px;
-  --border-radius: 15px;
 
   /**
    * Styles.
    */
   --focus-shadow: 0 0 20px var(--colour-grey);
+}
+
+/**
+ * Animations.
+ */
+ @keyframes intro {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes loading {
+  0%, 70%, 100% {
+    transform: scale3D(1, 1, 1);
+  }
+
+  35% {
+    background-color: var(--colour-purple);
+    transform: scale3D(0, 0, 1);
+  }
 }
