FIX: Added missing transitions

--- a/src/styles/components/password.scss
+++ b/src/styles/components/password.scss
@@ -6,6 +6,7 @@
  */
 .password {
   $parent: &;
+  animation: intro var(--timing-l) var(--easing);
 
   &__input-group {
     margin-bottom: var(--gutter-s);
