--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -18,7 +18,7 @@
 @import './base/body';
 @import './base/radio';
 @import './base/select';
-@import './base/text-field';
+@import './base/input-field';
 @import './base/typography';
 
 /**
