--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -19,6 +19,10 @@ h2 {
   font-weight: var(--weight-bold);
 }
 
+h3 {
+  font-weight: var(--weight-bold);
+}
+
 a {
   @include transition(color);
   border-bottom: 1px solid currentColor;
