--- a/src/styles/templates/start.scss
+++ b/src/styles/templates/start.scss
@@ -13,7 +13,7 @@
   }
 
   &__warning {
-    background-image: linear-gradient(to right, var(--colour-purple), var(--colour-green));
+    background-color: var(--colour-purple);
     color: var(--colour-text-inverse);
     font-weight: var(--weight-bold);
     padding: var(--gutter-s);
