FEATURE: Added favicon

--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -18,7 +18,7 @@
   --colour-grey: rgb(189, 195, 199);
   --colour-yellow: rgb(241, 196, 15);
   --colour-red: rgb(231, 76, 60);
-  --colour-purple: rgb(70, 46, 180);
+  --colour-purple: rgb(70, 46, 180); // #462eb4
 
   --colour-white: rgb(255, 255, 255);
 
