--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -12,4 +12,14 @@
   justify-content: center;
   width: 100%;
   z-index: 1;
+
+  &__icon {
+    height: 28px;
+    margin-right: var(--gutter-xs);
+    width: 30px;
+
+    img {
+      display: inherit;
+    }
+  }
 }
