--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -27,6 +27,7 @@
 @import './components/button';
 @import './components/choices';
 @import './components/header';
+@import './components/leaderboard';
 @import './components/loading';
 @import './components/medal';
 @import './components/password';
