REFACTOR: Moved question set ID to submission, added to footer

--- a/src/styles/templates/start.scss
+++ b/src/styles/templates/start.scss
@@ -59,7 +59,18 @@
   }
 
   &__footer {
-    display: block;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     margin-top: var(--gutter-l);
+  }
+
+  &__id {
+    background-color: var(--colour-light-grey);
+    border-radius: 2px;
+    font-size: 0.7rem;
+    line-height: 1;
+    padding: var(--gutter-2xs);
+    text-transform: uppercase;
   }
 }
