--- a/src/styles/components/leaderboard.scss
+++ b/src/styles/components/leaderboard.scss
@@ -9,22 +9,80 @@
   animation: intro var(--timing-l) var(--easing);
   width: 100%;
 
-  &__row {
+  &__individual {
     border-bottom: 3px solid var(--colour-purple);
+  }
+
+  &__button {
+    appearance: none;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    padding: var(--gutter-s);
+    text-align: left;
+    width: 100%;
+
+    &:focus {
+      background-color: var(--colour-light-grey);
+      outline: 0;
+    }
+  }
+
+  &__content {
+    display: none;
+    padding: var(--gutter-s);
+    padding-top: 0;
+    position: relative;
+
+    &::before {
+      background-color: var(--colour-purple);
+      content: '';
+      // Full height - padding
+      height: calc(100% - var(--gutter-s));
+      left: var(--gutter-s);
+      position: absolute;
+      top: -15px;
+      width: 1px;
+    }
+
+    &.is-active {
+      display: block;
+    }
+  }
+
+  &__row {
     display: grid;
     gap: var(--gutter-s);
     grid-template-columns: 1fr 100px;
-    padding: var(--gutter-s);
 
     &#{&}--header {
       background-color: var(--colour-purple);
-      border-bottom-width: 0;
       color: var(--colour-text-inverse);
       padding: var(--gutter-s);
 
       #{$parent}__cell {
         font-weight: var(--weight-bold);
       }
+    }
+
+    &#{&}--sub {
+      margin-top: var(--gutter-xs);
+      padding-left: var(--gutter-l);
+      position: relative;
+
+      &::before {
+        background-color: var(--colour-purple);
+        content: '';
+        height: 1px;
+        left: 0;
+        position: absolute;
+        top: 50%;
+        width: 25px;
+      }
+    }
+
+    &.is-disabled #{$parent}__cell {
+      opacity: 0.5;
     }
   }
 
