--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -26,6 +26,7 @@
  */
 @import './components/button';
 @import './components/choices';
+@import './components/footer';
 @import './components/header';
 @import './components/leaderboard';
 @import './components/loading';
